--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ p {
 }
 
 a {
- color: #ff0000;
+ color: #ff3300;
 }
 
 a:link {
- color: #00ff00;
+ color: #ff3300;
 }
 
 a:visited {
@@ -35,5 +35,14 @@ a {
 }
 
 a:hover {
+ color: #ffff00;
  text-decoration: underline;
+}
+
+div {
+background-color:  #000000;
+}
+
+header {
+  background-color: #000000;
 }
