--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
+* {
+  background-color: black
+}
+
 p {
  color: #ff3366;
 }
 
 .specialp {
  color: #0000ff;
-}
-
-#specialid {
- background-color: #00ff00;
 }
 
 a {
@@ -30,7 +30,7 @@ a:hover {
  color: #ffff00;
 }
 
-a {
+/*a {
  text-decoration: none;
 }
 
@@ -39,10 +39,10 @@ a:hover {
  text-decoration: underline;
 }
 
-div {
-background-color:  #000000;
+/*div {
+
 }
 
-header {
-  background-color: #000000;
+/*header {
+
 }
