--- a/exercise5.css
+++ b/exercise5.css
@@ -26,6 +26,11 @@ h2 {
     background-color: yellow;
   }
 
+  .p3 {
+    color: red;
+  }
+
   h4 {
     background-color: green;
+    color: yellow;
   }
