--- a/style.css
+++ b/style.css
@@ -44,7 +44,11 @@ body {
   margin: 6rem auto 1rem;
   max-width: 48rem;
   padding: .25rem;
+  background-image: url(zen.jpg);
+  background-repeat: no-repeat;
+  background-position: top left;
 }
+
 /*https://www.sitepoint.com/understanding-and-using-rem-units-in-css/
 https://www.w3schools.com/cssref/pr_dim_line-height.asp*/
 
