--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   margin: 6rem auto 1rem;
   max-width: 48rem;
   padding: .25rem;
-  background-image: url(zen.jpg);
+  background-image: url(images/zen.jpg);
   background-repeat: no-repeat;
   background-position: top left;
 }
