--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@
 }
 
 * {
-  background-image: url(images/zen.jpg);
-  background-repeat: no-repeat;
-  background-position: top left;
+  background-image: url(images/gradient.jpg)
 }
 
 img {
