--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 
 * {
   background-image: url(images/gradient.jpg)
-  background-position: top right;
+  background-repeat: no-repeat;
+  background-position: top left;
 }
 
 img {
