--- a/assignment5.css
+++ b/assignment5.css
@@ -8,32 +8,42 @@
 
 .purplespan1{
   color: #8D28C6;
-
+  text-align: center;
+  font-size: 16pt;
 }
 
 .purplespan2{
   color: #8D28C6;
-
+  text-align: center;
+  font-size: 20pt;
 }
 
 .redspan1{
   color: #FC0036;
-
+  text-align: center;
+  font-size: 30pt;
 }
 
 .redspan2{
   color: #FC0036;
+  text-align: center;
 
 }
 
 .pinkspan1{
   color: #FD28FE;
+  text-align: center;
 
 }
 
 .pinkspan2{
   color: #FD28FE;
-  
+  text-align: center;
+
+}
+
+.blockimg {
+  display: inline;
 }
 
 body{
