--- a/assignment5.css
+++ b/assignment5.css
@@ -18,6 +18,11 @@
   font-size: 20pt;
 }
 
+.purplespan3{
+  color: #8D28C6;
+  font-size: 12pt;
+}
+
 .redspan1{
   color: #FC0036;
   text-align: center;
