--- a/assignment5.css
+++ b/assignment5.css
@@ -6,6 +6,15 @@
   background-color: #FBD335;
 }
 
+
+.borderbottom {
+  border-bottom: 1px solid #8D28C6;
+}
+
+.bordertop {
+  border-top: 1px solid #8D28C6;
+}
+
 .purplespan1{
   color: #8D28C6;
   text-align: center;
