--- a/assignment5.css
+++ b/assignment5.css
@@ -54,6 +54,10 @@
   max-width: 100%
 }
 
+.p1, .p2, .p3, .p4, .p5{
+  text-align: center;
+}
+
 body{
   line-height: 1.45;
   margin: 6rem auto 1rem;
