--- a/assignment6.css
+++ b/assignment6.css
@@ -1,17 +1,16 @@
 body{
-  background-image:image('/images/a62.png');
+  background-image: url('images/a62.png');
 }
 
 header {
-  grid-column: span 2;
   background-color: black;
 }
 
 .wrapper {
-    margin: 1em auto;
+    margin: 2em auto;
     padding: 0;
     width: 960px;
-    border: 1px solid #ff0000;
+    border: 1px solid black;
     background-color: #ffffff;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
