--- a/assignment6.css
+++ b/assignment6.css
@@ -20,7 +20,6 @@ header {
     border: 2px solid black;
     background-color: #ffffff;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
 }
 
 nav {
@@ -49,21 +48,22 @@ nav li a {
 }
 
 .imagefloat{
-  border: 5px solid black;
+  border: 2px solid black;
   float: left;
-  margin-left: 5px;
+  margin-left: 1px;
   margin-right: 10px;
+  padding: 10px;
 }
 
 main {
-  grid-column: span 3;
-  grid-template: 1fr 1fr;
+  font: helvetica;
+  grid-column: span 2;
 }
 
 aside {
   grid-column: span 2;
-  height: 70px;
-  margin: 10px;
+  height: 30px;
+  margin-bottom: 10px;
   border-bottom: 2px solid black;
 }
 
