--- a/assignment6.css
+++ b/assignment6.css
@@ -8,9 +8,13 @@ header {
   text-align: left;
   color: white;
   background-color: black;
-  padding: 12px;
+  padding: 10px;
   margin: 12px;
   grid-column: span 3;
+}
+
+.h2{
+  font-weight: bold;
 }
 
 .wrapper {
@@ -23,25 +27,27 @@ header {
 }
 
 nav {
+  font-weight: bold;
+  font-family: helvetica;
   grid-column: span 1;
 }
 
 nav ul {
   list-style-type: none;
   margin: 10px;
-  padding: 10px;
+  padding: 2px;
 }
 
 nav li {
-  width: 260px;
-  height: 40px;
+  width: 264px;
+  height: 50px;
   padding: 10px;
 }
 
 nav li a {
   display: block;
   background-color: red;
-  padding: 10px;
+  padding: 15px;
   margin: 15px;
   color: white;
   text-decoration: none;
@@ -56,7 +62,7 @@ nav li a {
 }
 
 main {
-  font: helvetica;
+  font-family: helvetica;
   grid-column: span 2;
 }
 
@@ -66,6 +72,13 @@ aside {
   margin-bottom: 10px;
   border-bottom: 2px solid black;
 }
+
+.p1{
+  font-family: Georgia;
+  font-weight: bold;
+  justify-content: space-around;
+}
+
 
 footer {
   clear: both;
