--- a/assignment6.css
+++ b/assignment6.css
@@ -59,9 +59,6 @@ nav li {
   padding: 10px;
 }
 
-nav li:hover{
-  color: maroon;
-}
 
 nav li a {
   display: block;
@@ -72,6 +69,9 @@ nav li a {
   text-decoration: none;
 }
 
+nav li a:hover{
+  background-color: maroon;
+}
 
 main {
   font-family: helvetica;
