--- a/homepage.css
+++ b/homepage.css
@@ -11,8 +11,8 @@ header {
     margin: 1em auto;
     padding: 0;
     width: 960px;
-    border: 1px solid #ff0000;
-    background-color: #ffffff;
+    border: 2px solid #0BBA05;
+    background-color: #1B1C1D;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
