--- a/homepage.css
+++ b/homepage.css
@@ -49,7 +49,7 @@ nav li a {
 }
 
 .imagefloat{
-  border: 5px solid black;
+  border: 6px solid #0BBA05;
   float: left;
   margin-left: 5px;
   margin-right: 10px;
