--- a/homepage.css
+++ b/homepage.css
@@ -18,7 +18,7 @@ header {
     margin: 1em auto;
     padding: 0;
     width: 960px;
-    border: 2px solid #0BBA05;
+    border: 4px solid #0BBA05;
     background-color: #1B1C1D;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -35,23 +35,30 @@ nav ul {
 }
 
 nav li {
-  width: 200px;
+  width: 100px;
   display: inline-block;
 }
 
 nav li a {
   display: block;
-  background-color: red;
-  border: 1px solid black;
+  background-color: #1B1C1D;
+  border: 4px solid #0BBA05;
+  text-align: center;
   padding: 1em;
-  color: white;
+  color: #0BBA05;
   text-decoration: none;
 }
 
+nav li a:hover {
+  background-color: #0BBA05;
+  color: #050506;
+}
+
 .imagefloat{
-  float: left;
-  margin-left: 5px;
+  float: center;
+  margin-left: 30px;
   margin-right: 10px;
+  margin-bottom: 50px;
 }
 
 main {
@@ -63,6 +70,6 @@ aside {
 
 footer {
   clear: both;
-  background-color: blue;
+  background-color: #1B1C1D;
   grid-column: span 3;
 }
