--- a/homepage.css
+++ b/homepage.css
@@ -61,16 +61,15 @@ nav li a:hover {
 .imagefloat{
   float: center;
   margin-left: 30px;
-  margin-right: 10px;
+  margin-top: 50px;
   margin-bottom: 50px;
 }
 
 main {
   grid-column: span 2;
+  color: #B8B8B8;
 }
 
-aside {
-}
 
 footer {
   clear: both;
