--- a/homepage.css
+++ b/homepage.css
@@ -40,7 +40,7 @@ nav ul {
 
 nav li {
   width: 100px;
-  display: block;
+  display: inline-block;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
